--- a/client/src/css/scroller.css
+++ b/client/src/css/scroller.css
@@ -4,3 +4,12 @@
   text-align: center;
   margin-left: 20%;
 }
+
+.prevnext {
+  width: 37.33%;
+  text-align: center;
+}
+
+.buttons {
+  margin-left: 20%;
+}
