--- a/client/src/css/searchbar.css
+++ b/client/src/css/searchbar.css
@@ -3,14 +3,11 @@
   margin-top: 0px !important;
 }
 
-.container {
+.filtercontainer {
   width: 100%;
-  margin-left: 0px !important;
-  margin-right: 0px !important;
-  padding-left: 0px !important;
-  padding-right: 0px !important;
   display: flex;
   flex-direction: row;
+  padding-bottom: 2rem;
 }
 
 .filterbar {
