--- a/client/src/css/searchbar.css
+++ b/client/src/css/searchbar.css
@@ -8,6 +8,7 @@
   display: flex;
   flex-direction: row;
   padding-bottom: 2rem;
+  flex-wrap: wrap;
 }
 
 .filterbar {
@@ -20,4 +21,14 @@
   border-radius: 0px !important;
   margin-top: 0px !important;
   margin-left: 0px !important;
+}
+
+.slider {
+  padding-left: 2%;
+  padding-right: 2%;
+}
+
+.typo {
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
 }
