--- a/client/src/css/navbar.css
+++ b/client/src/css/navbar.css
@@ -1,3 +1,13 @@
 .navbar {
   margin-bottom: 0px !important;
 }
+
+.img {
+  height: 35px;
+}
+
+.navbartext {
+  color: #940000 !important;
+  font-style: italic;
+  font-size: 2rem !important;
+}
