--- a/client/src/css/scroller.css
+++ b/client/src/css/scroller.css
@@ -22,3 +22,10 @@
   background-image: url("img/fifabackground.jpg");
   background-size: cover;
 }
+
+.modalcontainer {
+  display: grid;
+  grid-template-columns: 30% 60%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
