--- a/client/src/css/searchbar.css
+++ b/client/src/css/searchbar.css
@@ -9,18 +9,18 @@
   flex-direction: row;
   padding-bottom: 0;
   flex-wrap: wrap;
-}
-
-.sortconatiner {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
+  justify-content: center;
 }
 
 .filterbar {
   margin-top: 0px;
   width: 33.3333333%;
+  margin-bottom: 1rem;
+}
+
+.playerimg {
+  width: 100%;
+  height: auto;
 }
 
 .button {
@@ -35,6 +35,11 @@
   padding-right: 2%;
 }
 
+.header {
+  color: #940000;
+  font-style: italic;
+}
+
 .typo {
   margin-top: 0 !important;
   margin-bottom: 0 !important;
@@ -42,4 +47,18 @@
 
 .sort {
   margin-left: 5%;
+}
+
+.sortelement {
+  margin-right: 0;
+  width: 50%;
+  text-align: center;
+  justify-content: center;
+  border-radius: 4px;
+  border-style: solid;
+  border-width: 1px;
+  border-color: hsl(0, 0%, 80%);
+  background-color: hsl(0, 0%, 100%);
+  color: hsl(0, 0%, 50%);
+  margin-bottom: 1rem;
 }
